feat: identificando a rota ativa

--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -1,17 +1,19 @@
 <header>
-  <a class="logo"
-    routerLink="/lista-livros">
-    <img
-      src="assets/imagens/logo.png"
-      alt="Logo da aplicação Buscante">
+  <a
+    class="logo"
+    routerLink="/lista-livros"
+    routerLinkActive="active-page"
+    ariaCurrentWhenActive="page"
+  >
+    <img src="assets/imagens/logo.png" alt="Logo da aplicação Buscante" />
   </a>
   <nav>
-    <a
-      routerLink="/sobre">Sobre
-    </a>
-    <a
-      routerLink="/contato">Contato
-    </a>
+    <a routerLink="/sobre" routerLinkActive="active-page"> Sobre </a>
+    <a routerLink="/contato" routerLinkActive="active-page"> Contato </a>
   </nav>
 </header>
 
+<!--
+    'routerLinkActive' identifica a rota ativa e aplica o estilo definido na classe 'active-page'
+    'ariaCurrentWhenActive' usado para deficientes visuais identificar qual rota está ativa
+  -->
