--- a/src/app/componentes/cabecalho/cabecalho.component.css
+++ b/src/app/componentes/cabecalho/cabecalho.component.css
@@ -1,16 +1,16 @@
 header {
-  background-color: #050C42;
+  background-color: #050c42;
   height: 96px;
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content:space-around;
-  font-family: 'Poppins', sans-serif;
+  justify-content: space-around;
+  font-family: "Poppins", sans-serif;
 }
 
 header a {
   text-decoration: none;
-  color: #FFFFFF;
+  color: #ffffff;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -18,9 +18,16 @@ header a {
   margin-right: 1.5rem;
 }
 
+header .active-page {
+  color: #6c63ff;
+}
+
+header .active-page.logo {
+  background-color: #f5f5f5;
+}
+
 .logo {
   display: block;
   width: 236px;
   height: 60px;
 }
-
