feat: adiciona aria-label de forma dinâmica utilizando o binding

--- a/src/app/componentes/livro/livro.component.html
+++ b/src/app/componentes/livro/livro.component.html
@@ -4,7 +4,9 @@
     alt="Capa do livro"
   />
   <section aria-label="Detalhes do livro" class="info-card">
-    <h2>{{ livro.title | slice : 0 : 30 }}</h2>
+    <h2 [attr.aria-label]="'Título do livro' + livro.title">
+      {{ livro.title | slice : 0 : 30 }}
+    </h2>
     <dl>
       <dt class="informacoes">Autoria:</dt>
       <dd class="resultado">
