--- a/src/app/pages/lista-livros/lista-livros.component.html
+++ b/src/app/pages/lista-livros/lista-livros.component.html
@@ -14,7 +14,11 @@
   </form>
   <p>Busque por assunto, autoria, nome...</p>
   @if (mensagemErro) {
-  <section aria-label="Mensagem de erro" class="resultados mensagem-erro">
+  <section
+    role="alert"
+    aria-label="Mensagem de erro"
+    class="resultados mensagem-erro"
+  >
     {{ mensagemErro }}
   </section>
   } @if (livrosEncontrados$ | async; as listaLivros) {
