--- a/src/app/pages/contato/contato.component.html
+++ b/src/app/pages/contato/contato.component.html
@@ -14,6 +14,7 @@
       <div class="campo-form">
         <label for="nome">Nome</label>
         <input
+          [attr.aria-invalid]="contatoForm.get('nome')?.invalid"
           type="text"
           id="nome"
           placeholder="Digite seu nome completo"
@@ -28,6 +29,7 @@
       <div class="campo-form">
         <label for="email">E-mail</label>
         <input
+          [attr.aria-invalid]="contatoForm.get('email')?.invalid"
           type="email"
           id="email"
           placeholder="Digite seu email"
@@ -112,6 +114,7 @@
       <div class="campo-form">
         <label for="mensagem">Mensagem</label>
         <textarea
+          [attr.aria-invalid]="contatoForm.get('mensagem')?.invalid"
           id="mensagem"
           placeholder="Digite sua mensagem"
           formControlName="mensagem"
@@ -139,3 +142,8 @@
     </div>
   </form>
 </div>
+
+<!--
+  [attr.aria-invalid] é empregado para vincular dinamicamente valores a atributos ARIA, indicando se um campo de senha está válido ou inválido com base em condições específicas,
+  melhorando a experiência de pessoas que dependem de tecnologias assistivas.
+-->
