--- a/src/app/pages/contato/contato.component.html
+++ b/src/app/pages/contato/contato.component.html
@@ -14,6 +14,7 @@
       <div class="campo-form">
         <label for="nome">Nome</label>
         <input
+          aria-describedby="nome-erro"
           [attr.aria-invalid]="contatoForm.get('nome')?.invalid"
           type="text"
           id="nome"
@@ -29,6 +30,8 @@
       <div class="campo-form">
         <label for="email">E-mail</label>
         <input
+          aria-label="Endereço de email"
+          aria-describedby="email-erro-email email-erro-required"
           [attr.aria-invalid]="contatoForm.get('email')?.invalid"
           type="email"
           id="email"
@@ -114,6 +117,7 @@
       <div class="campo-form">
         <label for="mensagem">Mensagem</label>
         <textarea
+          aria-describedby="mensagem-erro"
           [attr.aria-invalid]="contatoForm.get('mensagem')?.invalid"
           id="mensagem"
           placeholder="Digite sua mensagem"
@@ -146,4 +150,6 @@
 <!--
   [attr.aria-invalid] é empregado para vincular dinamicamente valores a atributos ARIA, indicando se um campo de senha está válido ou inválido com base em condições específicas,
   melhorando a experiência de pessoas que dependem de tecnologias assistivas.
+
+  'aria-describedby' recebe o id do elemento ao qual ele vai descrever
 -->
