feat: gerenciando o foco do modal para e manter no modal

--- a/src/app/pages/contato/contato.component.html
+++ b/src/app/pages/contato/contato.component.html
@@ -152,7 +152,7 @@
   [attr.aria-invalid] é empregado para vincular dinamicamente valores a atributos ARIA, indicando se um campo de senha está válido ou inválido com base em condições específicas,
   melhorando a experiência de pessoas que dependem de tecnologias assistivas.
 
-  'aria-describedby' recebe o id do elemento ao qual ele vai descrever
+  'aria-describedby' recebe o id do elemento ao qual ele vai descrever. Serve para vincular descrições extras de mensagens de erro a campos específicos.
 
   'aria-disabled' é empregado para vincular dinamicamente valores a atributos ARIA, indicando se um botão está habilitado ou desabilitado com base em condições específicas,
   proporcionando informações explícitas para pessoas que utilizam de leitores de tela.
